# robocup1

./: .gitignore  Problem.md  README.md  ToDoList.md
configs/: fastdds.xml
roboCup_sdk/: CMakeLists.txt
roboCup_sdk/include/common/: LocationModule.hpp  mathTools.h  mathTypes.h  types.h
roboCup_sdk/include/control/: interface.h  node.h
roboCup_sdk/include/utilities/: yaml_parser.h
roboCup_sdk/script/: sendToRobot.sh
roboCup_sdk/src/common/: DetectionModule.cpp  LocationModule.cpp
roboCup_sdk/src/control/: interface.cpp  node.cpp
roboCup_sdk/test/: Back_test.cpp  Back_test.xml  CMakeLists.txt  findAndTrackBall.cpp  findAndTrackBall.xml  halfFieldKickExample.cpp  halfFieldKickExample.xml
roboCup_sdk/test/node/: camFindBall.cpp  camFindBall.xml  camToPosition.cpp  camToPosition.xml  camTrackBall.cpp  camTrackBall.xml
robocup_locator_v1.0/: README.md  config.yaml  send_to_robot.sh  test_location.cpp  test_subscribe_location.cpp
robocup_locator_v1.0/include/: Locator.h  ParticleFilter.h  display.h  pose.h  types.h
robocup_locator_v1.0/src/: Locator.cpp  ParticleFilter.cpp  display.cpp
scripts/: build.sh  sim_start.sh  start.sh  start_brain.sh  start_game_controller.sh  start_joystick.sh  start_vision.sh  stop.sh
scripts/vision/: build_engine.sh
src/brain/: CMakeLists.txt  package.xml
src/brain/behavior_trees/: assist.xml  chase.xml  game.xml  test.xml
src/brain/behavior_trees/subtrees/: subtree_cam_find_and_track_ball.xml  subtree_goal_keeper_freekick.xml  subtree_goal_keeper_play.xml  subtree_striker_freekick.xml  subtree_striker_play.xml
src/brain/config/: brain.yaml
src/brain/include/: brain.h  brain_config.h  brain_data.h  brain_log.h  brain_tree.h  joy_msg.h  locator.h  robot_client.h  stablizer.h  types.h
src/brain/include/utils/: math.h  misc.h  print.h
src/brain/launch/: launch.py
src/brain/src/: brain.cpp  brain_config.cpp  brain_data.cpp  brain_log.cpp  brain_tree.cpp  joy_msg.cpp  locator.cpp  main.cpp  robot_client.cpp
src/game_controller/: CMakeLists.txt  README.md
src/game_controller/include/: RoboCupGameControlData.h  game_controller_node.h
src/game_controller/launch/: launch.py
src/game_controller/src/: game_controller_node.cpp  main.cpp
src/interface/booster_interface/: CMakeLists.txt  package.xml
src/interface/booster_interface/msg/: ImuState.msg  MotorState.msg
src/interface/booster_msgs/: CMakeLists.txt  package.xml
src/interface/booster_msgs/include/: message_utils.h
src/interface/game_controller_interface/msg/: GameControlData.msg  RobotInfo.msg  TeamInfo.msg
src/interface/vision_interface/: CMakeLists.txt  package.xml
src/interface/vision_interface/msg/: DetectedObject.msg  Detections.msg
src/vision/: CMakeLists.txt
src/vision/config/: vision.yaml
src/vision/include/booster_vision/: img_bridge.h  vision_node.h
src/vision/include/booster_vision/base/: data_syncer.hpp  intrin.h  misc_utils.hpp  pointcloud_process.h  pose.h
src/vision/include/booster_vision/model/: detector.h  segmentor.h
src/vision/include/booster_vision/model/trt/: impl.h
src/vision/include/booster_vision/pose_estimator/: pose_estimator.h
src/vision/launch/: launch.py
src/vision/src/: CMakeLists.txt  img_bridge.cpp  main.cpp  vision_node.cpp
src/vision/src/base/: CMakeLists.txt  data_syncer.cpp  intrin.cpp  pointcloud_process.cpp  pose.cpp
src/vision/src/model/: CMakeLists.txt  detector.cc
src/vision/src/model/trt/: CMakeLists.txt  block.cpp  calibrator.cpp  impl.cpp  model.cpp  postprocess.cpp  yolov8_det.cpp
src/vision/src/pose_estimator/: pose_estimator.cpp
src/vision/test/: CMakeLists.txt
src/vision/test/model/: test_yolov8.cpp
定位/robocup_locator_v1.1/: CMakeLists.txt  README.md  README_zh.md  send_to_robot.sh
定位/robocup_locator_v1.1/include/: DetectionModule.hpp  Locator.h  math.h  misc.h  types.h  yaml_parser.h
定位/robocup_locator_v1.1/include/dds/: DetectionModule.idl  LocationModule.idl
定位/robocup_locator_v1.1/src/: LocationModule.cpp  Locator.cpp  ParticleFilter.cpp  display.cpp  pose.cpp
注释/: node_注释.cpp
舵机控制/g1_comp_servo_service/: .gitignore  CMakeLists.txt  README.md  main.cpp
舵机控制/g1_comp_servo_service/doc/: sdk.md
舵机控制/g1_comp_servo_service/g1_comp_servo_service/config/: config.yaml
舵机控制/g1_comp_servo_service/g1_comp_servo_service/doc/: .gitignore
舵机控制/g1_comp_servo_service/g1_comp_servo_service/test/: test_calibration.cpp  test_joint1_control.cpp  test_read_yaml.cpp  test_servo_control.cpp  test_servo_homePostion.cpp
舵机控制/g1_comp_servo_service/include/: param.h  utilities.h
舵机控制/g1_comp_servo_service/include/dds/: Subscription.h
舵机控制/g1_comp_servo_service/test/: test_joint0_control.cpp  test_read_angle.cpp  test_read_encoder.cpp
识别/football_detectcpp/: CMakeLists.txt  README.md  README_ZH.md  main.cpp  sub.cpp
识别/football_detectcpp/dds/: DetectionModule.cpp
识别/football_detectcpp/football_detectcpp/: football_build.sh  football_onnx2trt.sh  football_run.sh  main.cpp  sub.cpp
识别/football_detectcpp/football_detectcpp/dds/: DetectionModule.cpp  DetectionModule.hpp
识别/football_detectcpp/football_detectcpp/src/: DetectionModule.cpp  YOLO.h  macros.h  preprocess.cu
识别/football_detectcpp/football_detectcpp/utils/: yolo_image_label.py
识别/football_detectcpp/src/: DetectionModule.hpp  YOLO.cpp  common.h
识别/football_detectcpp/utils/: FootballDetection.py  pt_to_onnx.py.py  save_image.py  spilt_data.py  utils.py
